<resources>
    <string name="app_name">Farmers</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="place_input_username">请输入账号</string>
    <string name="place_input_password">请输入登录密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="place_input_phone">请输入手机号码</string>
    <string name="place_input_code">请输入短信验证码</string>
    <string name="place_input_new_password">请输入新密码</string>
    <string name="place_input_reg_password">请输入密码</string>
    <string name="check_password">确认密码</string>
    <string name="confirm">确定</string>
    <string name="sms_verification">短信验证</string>
    <string name="know">知道了</string>
    <string name="examine">已提交给管理员审核</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">下一步</string>
    <string name="place_input_merchant">请输入商户名称</string>
    <string name="place_input_corporation">请输入法人姓名</string>
    <string name="place_input_organize">请输入组织代码</string>
    <string name="scan_certificate_of_business">扫描营业执照二维码录入信息</string>
    <string name="confirm_submission">确认提交</string>
    <string name="retrospect">采样任务</string>
    <string name="sampling">采样</string>
    <string name="booking">记账</string>
    <string name="check">检测</string>
    <string name="purchasing">进货</string>
    <string name="operator_management">经营户管理</string>
    <string name="operator_info">经营户信息</string>
    <string name="stock">库存</string>
    <string name="appraise">评价</string>
    <string name="appraise_management">评价管理</string>
    <string name="marketing_management">市场部管理</string>
    <string name="charge">收费管理</string>
    <string name="sell">销售</string>

    <string name="stock_purchase">进货</string>
    <string name="add_stock_list">新增进货单</string>
    <string name="stock_goods">库存</string>
    <string name="pay">缴费</string>


    <string name="my_account_setting">账户设置</string>
    <string name="my_account_person_info">个人资料</string>
    <string name="my_account_change_pwd">修改密码</string>
    <string name="my_account_change_phone">修改绑定手机号</string>
    <string name="my_account_location">所在地</string>
    <string name="my_exit_login">退出登录</string>
    <string name="my_regist_account">注册账号</string>
    <string name="my_busniss_name">商户名称</string>
    <string name="my_legal_name">法人姓名</string>
    <string name="my_organization_count">组织机构代码</string>
    <string name="my_sales_accounting">销售记账</string>
    <string name="my_sales_count">销售额</string>
    <string name="save">保存</string>
    <string name="remember">记一笔</string>
    <string name="account">账户</string>
    <string name="type">分类</string>
    <string name="price">单价</string>
    <string name="count">数量</string>
    <string name="evaluate">评价</string>
    <string name="invoice_for_payment">凭证</string>
    <string name="remarks">备注</string>
    <string name="txt_new_market_score">新建市场监管部打分</string>
    <string name="txt_market_score_detail">市场部打分详情</string>
    <string name="cancel">取消</string>
    <string name="evaluate_type">评价类型</string>
    <string name="total_score">总分</string>
    <string name="pic">照片</string>
    <string name="score">分数</string>
    <string name="safe_quality">安全质量</string>
    <string name="service">服务态度</string>
    <string name="scale">经营规模</string>
    <string name="discount">让利</string>
    <string name="clean">整\t洁\t度</string>
    <string name="amount">合\t\t\t\t计</string>

    <string name="operator_input_info">经营者信息录入</string>
    <string name="merchant_name">商户名</string>
    <string name="contract_info">联系方式</string>
    <string name="credit_degree">信用度</string>
    <string name="managerment_type">经营类型</string>
    <string name="upload_business_lincense">点击上传营业执照</string>
    <string name="upload_certificates">点击上传联系人身份证</string>
    <string name="remarks_operator_input_info">注：所有证件仅用于市场信息登记</string>


    <string name="date_back_to">采样任务</string>
    <string name="sample">采样</string>
    <string name="examine_menu">检测</string>
    <string name="mine">评价</string>


    <string name="operating_households">经营户</string>
    <string name="market">市场</string>
    <string name="collect_fees">收费</string>
    <string name="sale_goods_list">出货清单</string>
    <string name="organization_datebackto">检测机构追溯</string>
    <string name="sale_type">进销类型</string>
    <string name="search">搜索</string>
    <string name="datebackto_num">追溯编号</string>
    <string name="sales_name">商品名称</string>
    <string name="store_info">商户信息</string>
    <string name="buy">采购</string>
    <string name="pay_detail">  缴费明细  </string>
    <string name="unpaid">  未缴费  </string>
    <string name="category">类别</string>
    <string name="traceability_coding">溯源编码</string>
    <string name="purchasing_id">进货单号</string>
    <string name="purchasing_company">进货单位</string>
    <string name="total">合计</string>
    <string name="detection_information">检测信息</string>
    <string name="see">查看</string>
    <string name="detected">已检测</string>
    <string name="organization_datebackto_detail">检测机构追溯详情</string>
    <string name="take_sample">检测机构采样费用</string>
    <string name="pay_money">需支付金额（元）</string>
    <string name="pay_company">缴费单位</string>
    <string name="pay_stall">摊位号</string>
    <string name="print">打印</string>
    <string name="notice_pay">通知缴费</string>
    <string name="takesample_num">采样编号</string>
    <string name="takesample_type">商品类型</string>
    <string name="takesample_count">采样数量</string>
    <string name="takesample_time">采样时间</string>
    <string name="take_sample_list">检测机构采样列表</string>
    <string name="product_market">农贸市场</string>
    <string name="company_name">单位名称</string>
    <string name="write_context">请输入内容</string>
    <string name="choose_rules">选择条款</string>
    <string name="vegetable">蔬菜</string>
    <string name="ok">确认</string>
    <string name="supplier">供应商</string>
    <string name="add">添加</string>
    <string name="wholesale_market">批发市场</string>
    <string name="add_bill_of_sales">新增出货单</string>
    <string name="date">日期</string>
    <string name="picture">图片</string>
    <string name="odd_numbers">单号</string>
    <string name="ware_house">仓库</string>
    <string name="choose_goods">选择商品</string>
    <string name="product_name">产品名称</string>
    <string name="total_price">总价</string>
    <string name="supplier_name">采购商名称</string>
    <string name="card_num">身份证号/营业执照</string>
    <string name="check_status">检测状态</string>
    <string name="remark_store_list">注：点击右上角扫描营业执照二维码可快速录入</string>
    <string name="add_other_supplier">其他采购商信息录入</string>
    <string name="add_new_supplier">新增供应商商</string>
    <string name="shipping_stock">出货库存</string>
    <string name="left_count">剩余数量</string>
    <string name="operator_inquiry">经营户查询</string>
    <string name="hint_input_market">请输入市场名称</string>
    <string name="business_license">营业执照</string>
    <string name="connect">联系人</string>
    <string name="sales_count">销售金额</string>
    <string name="buy_count">采购金额</string>
    <string name="market_add_new_punish">市场管理处罚新增</string>
    <string name="person_charge">负责人</string>
    <string name="punish">处罚</string>
    <string name="violation_of_regulations">违反条例</string>
    <string name="unselect">选择</string>
    <string name="select">已选择</string>
    <string name="already_evaluated">已评价</string>
    <string name="not_evaluated">已评价</string>
    <string name="all">全部</string>
    <string name="hint_input_company">请输入单位名称</string>
    <string name="market_name">市场</string>
    <string name="jurisdiction_unit">管辖单位</string>
    <string name="market_score">市场部打分</string>
    <string name="serial_num">序号</string>
    <string name="regulations">条例</string>
    <string name="forfeit">罚款</string>
    <string name="violation_of_regulation">违反规定条例</string>
    <string name="life_payment">生活缴费</string>
    <string name="payments_record">缴费记录</string>

    <string name="charge_water">水费</string>
    <string name="charge_electric">电费</string>
    <string name="charge_stall">摊位费</string>
    <string name="charge_bond">保证金</string>
    <string name="charge_fee">物业费</string>
    <string name="charge_health">卫生费</string>
    <string name="charge_lift">电梯费</string>
    <string name="charge_other">其他</string>
    <string name="charge_electric_not_pay">电费·未交</string>
    <string name="charge_other_not_pay">其他·罚款·未交</string>
    <string name="charge_remind_pay">未缴费提醒</string>
    <string name="charge_pay_now">立即支付</string>
    <string name="charge_not_pay">未交</string>
    <string name="charge_pay">已交</string>
    <string name="life_payment_record">商户缴费记录</string>
    <string name="pay_now">支付</string>
    <string name="pay_should">应交费</string>
    <string name="pay_not">未交费</string>
    <string name="check_detail">查看详情</string>
    <string name="charge_details">收费管理详情</string>
    <string name="bill_of_sales_details">出货单详情</string>
    <string name="goods_detail">商品详情</string>
    <string name="manage">管理</string>
    <string name="buhegechuzhi">不合格处置</string>
    <string name="falvfagui">法律法规</string>
    <string name="kepu">科普</string>
    <string name="kaohe">考核</string>
    <string name="guojiwenxian">国际文献</string>
    <string name="danweicchaxun">单位查询</string>

    <string name="shichangjiance">市场检查</string>
    <string name="shichangguanli">市场管理</string>
    <string name="shangpingsuyuan">商品溯源</string>
    <string name="pingjiaguanli">评价管理</string>
    <string name="jyh_chaxun">经营户查询</string>
    <string name="wode">我的</string>
    <string name="zhidfu_chaxun">制度查询</string>
    <string name="show_msg">信息指南</string>
    <string name="jyh_xingwei">经营行为</string>
    <string name="jyh_remark">经营户评价</string>
    <string name="shichangxuncha">市场巡查</string>
    <string name="market_credit">市场信用</string>
    <string name="jiaofeichaxun">交费查询</string>
    <string name="chufachaxun">处罚查询</string>
    <string name="shicaizhiliang">食材质量</string>
    <string name="suyuanxinxi">溯源信息</string>



</resources>
