<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linear_item"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp59"
        android:background="@color/bg_gray_e9"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_num"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/datebackto_num"
            android:textSize="@dimen/sp16"
            />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sales_name"
            android:textSize="@dimen/sp16"

            />

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sale_type"
            android:textSize="@dimen/sp16"

            />

        <TextView
            android:id="@+id/tv_info"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/sp16"
            android:text="@string/store_info"

            />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="@dimen/dp55"
                android:layout_height="@dimen/dp25"
                android:layout_weight="1"
                android:layout_centerInParent="true"
                android:background="@color/color_00d39d"
                android:textSize="@dimen/sp14"
                android:gravity="center"
                android:textColor="@color/write"
                android:text="@string/date_back_to"
                />
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>