<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linear_item"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp48"
        android:background="@color/bg_gray_e9"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp59"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_product_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:gravity="center"
                android:text="@string/product_name"
                android:visibility="gone"
                android:textSize="@dimen/sp12" />

            <TextView
                android:id="@+id/tv_product_type"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:gravity="center"
                android:text="@string/type"
                android:textColor="@color/color_00d39d"
                android:textSize="@dimen/sp12" />

            <TextView
                android:id="@+id/tv_product_count"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/count"
                android:textSize="@dimen/sp12" />

            <TextView
                android:id="@+id/tv_product_price"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/price"
                android:textSize="@dimen/sp12" />

            <TextView
                android:id="@+id/tv_product_suppliert"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:gravity="center"
                android:text="@string/supplier"
                android:textSize="@dimen/sp12" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2">

                <TextView
                    android:id="@+id/tv_product_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/date"
                    android:textColor="@color/color_00d39d"
                    android:textSize="@dimen/sp12" />
                <ImageView
                    android:layout_width="@dimen/dp6"
                    android:layout_height="@dimen/dp12"
                    android:background="@drawable/bg_arrow_black_to"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dp5"
                    android:layout_alignParentRight="true"
                    />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>