<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linear_item"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp59"
        android:background="@color/bg_gray_e9"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_num"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/datebackto_num"
            android:textSize="@dimen/sp16"
            />

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sales_name"
            android:textSize="@dimen/sp16"

            />

        <TextView
            android:id="@+id/tv_count"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sale_type"
            android:textSize="@dimen/sp16"

            />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:lines="1"
            android:textColor="@color/color_00d39d"
            android:textSize="@dimen/sp14"
            android:text="@string/store_info"

            />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerInParent="true"
                >

            <ImageView
                android:id="@+id/iv_print"
                android:layout_width="@dimen/dp16"
                android:layout_height="@dimen/dp16"
                android:background="@drawable/bg_print_gray"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_toRightOf="@+id/iv_print"
                android:layout_marginLeft="@dimen/dp6"
                android:text="@string/print"
                android:textSize="@dimen/sp14"
                />
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>