<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linear_item"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp48"
        android:background="@color/bg_gray_e9"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp59"
            android:layout_marginLeft="@dimen/dp15"
            android:layout_marginRight="@dimen/dp15"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/product_name"
                android:textSize="@dimen/sp14"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_type"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/type"
                android:textSize="@dimen/sp14"
                android:textStyle="bold"

                />

            <TextView
                android:id="@+id/tv_count"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/count"
                android:textSize="@dimen/sp14"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/price"
                android:textSize="@dimen/sp14"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_total"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/total_price"
                android:textSize="@dimen/sp14"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/iv_voucher"
                    android:layout_width="@dimen/dp23"
                    android:layout_height="@dimen/dp23"
                    android:layout_centerInParent="true"
                    android:background="@drawable/bg_pic_has" />
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>