<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">



        <LinearLayout
            android:id="@+id/linear_item"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp59"
            android:background="@color/bg_gray_e9"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_type"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/type"
                android:textColor="@color/txt_black_51"
                android:textSize="@dimen/sp14" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/product_name"
                android:textColor="@color/txt_black_51"
                android:textSize="@dimen/sp14" />

            <TextView
                android:id="@+id/tv_left_count"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/left_count"
                android:textColor="@color/txt_black_51"
                android:textSize="@dimen/sp14" />


        </LinearLayout>
</LinearLayout>