<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".login.LoginActivity">

    <TextView
        android:layout_width="217dp"
        android:layout_height="38dp"
        android:layout_marginTop="143dp"
        android:background="@drawable/bg_login_tv_write"
        android:gravity="center"
        android:text="@string/forget_password"
        android:textColor="@color/color_000006"
        android:textSize="15dp" />

    <RelativeLayout
        android:layout_width="282dp"
        android:layout_height="332dp"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="308dp"
            android:background="@drawable/bg_login_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="17dp" />

                <EditText
                    android:id="@+id/et_forget_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/place_input_phone"
                    android:paddingLeft="3dp"
                    android:textColor="@color/color_333333"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/tv_forget_send"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_forget_sms"
                    android:paddingLeft="5dp"
                    android:paddingTop="2dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="2dp"
                    android:text="@string/sms_verification"
                    android:textColor="@color/color_000006"
                    android:textSize="14dp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#eeeeee" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="17dp" />

                <EditText
                    android:id="@+id/et_forget_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/place_input_code"
                    android:paddingLeft="3dp"
                    android:textColor="@color/color_333333"
                    android:textSize="15dp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#eeeeee" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="17dp" />

                <EditText
                    android:id="@+id/et_forget_new_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/place_input_new_password"
                    android:inputType="textPassword"
                    android:paddingLeft="3dp"
                    android:textColor="@color/color_333333"
                    android:textSize="15dp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#eeeeee" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="17dp" />

                <EditText
                    android:id="@+id/et_forget_check_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/check_password"
                    android:inputType="textPassword"
                    android:paddingLeft="3dp"
                    android:textColor="@color/color_333333"
                    android:textSize="15dp" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_forget"
            android:layout_width="234dp"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/bg_login_btn"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/write"
            android:textSize="18dp" />

    </RelativeLayout>

</LinearLayout>